// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OverlayPanel (M1.3) > degrades the MCP inventory at 40 columns 1`] = `
"╭──────────────────────────────────────╮
│MCP · ready · 2 servers               │
│› github · 2 tools                    │
│  figma · 4 tools · 3 not shown       │
│  create_issue · Open an issue        │
│  list_repos · List repositories      │
│Connection health: no public registry…│
│1/2 · ↑/↓ select · R refresh · Esc cl…│
╰──────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > degrades the activity center at 40 columns 1`] = `
"╭──────────────────────────────────────╮
│Activity · 2 jobs running · 3 subagen…│
│› [jobs] bash-2 failed: pnpm build    │
│  exit code: 3                        │
│  [subagents] 3 subagent updates (×4) │
│  [plan] A plan is awaiting review    │
│1/3 · ↑/↓ select · Enter open · D dis…│
╰──────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > degrades the job panel at 40 columns 1`] = `
"╭──────────────────────────────────────╮
│Jobs · ready · 2 running              │
│  bash-1 · running · pnpm test --watch│
│› bash-2 · failed · pnpm build        │
│  exit code: 3                        │
│  subagent-1 · running · unowned · au…│
│Output stays with the agent · 2/3 · ↑…│
╰──────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > degrades the plugin inventory at 40 columns 1`] = `
"╭──────────────────────────────────────╮
│Plugins · ready · 3 entries · 1 failed│
│  enabled  · active · @scope/ok       │
│› enabled  · failed · @scope/broken   │
│  disabled · none · @scope/off        │
│  Enabled entry whose root fiber fail…│
│Read-only: no public transaction owns…│
│2/3 · ↑/↓ select · R refresh · Esc cl…│
╰──────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > degrades the skill catalog at 40 columns 1`] = `
"╭──────────────────────────────────────╮
│Skills · ready · 2 matching           │
│> rev█                                │
│› /review-code · Review the diff for …│
│  /route-review · Internal routing he…│
│Hooks: no public inventory on this Ha…│
│1/2 · ↑/↓ select · Enter insert · ^D …│
╰──────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > degrades the subagent tree at 40 columns 1`] = `
"╭──────────────────────────────────────╮
│Subagents · ready · 1 unread          │
│› •audit the change index · continuab…│
│     summarize findings · one-shot · …│
│  child-bad · unreadable (corrupt)    │
│1/3 · ↑/↓ select · F follow up · I in…│
╰──────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > drops box drawing in screen-reader mode without losing any text 1`] = `
"MCP · ready · 1 servers
› github · 1 tools
  create_issue · Open an issue
Connection health: no public registry on this Harness baseline · 7 non-MCP tools
1/1 · ↑/↓ select · R refresh · Esc close"
`;

exports[`OverlayPanel (M1.3) > marks partial skill discovery instead of presenting it as the whole catalog 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Skills · ready · 2 matching · partial discovery                               │
│> rev█                                                                        │
│› /review-code · Review the diff for correctness · project-dsh                │
│  /route-review · Internal routing helper · model only · runtime              │
│Hooks: no public inventory on this Harness baseline                           │
│1/2 · ↑/↓ select · Enter insert · ^D details · R refresh · Esc close          │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders MCP servers grouped by name with the health boundary 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│MCP · ready · 2 servers                                                       │
│› github · 2 tools                                                            │
│  figma · 4 tools · 3 not shown                                               │
│  create_issue · Open an issue                                                │
│  list_repos · List repositories                                              │
│Connection health: no public registry on this Harness baseline · 7 non-MCP to…│
│1/2 · ↑/↓ select · R refresh · Esc close                                      │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders a bounded narrow command palette 1`] = `
"╭──────────────────────────────────────╮
│Command palette                       │
│> com█                                │
│  /command-3 · Description 3          │
│  /command-4 · Description 4          │
│› /command-5 · Description 5          │
│  /command-6 · Description 6          │
│6/8 · Enter select · Esc close · cata…│
╰──────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders a bounded projection hub with diagnostics and selected detail 1`] = `
"╭──────────────────────────────────────────────────────────────╮
│Projections · degraded · seq 42                               │
│  Plan · active                                               │
│  ● Add projection panel                                      │
│› Goal · active · Ship orchestration                          │
│  rounds 2/8 · revision 3                                     │
│  Usage · 1000 cumulative tokens                              │
│3/5 · ↑/↓ inspect · R refresh · Esc close · 1 below           │
╰──────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders a bounded session list and durable preview metadata 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Session center · ready                                                        │
│W cycles workspace: workspace (1)                                             │
│> session█                                                                    │
│› ● current-session · 2023-11-14T22:13:20.000Z · /workspace                   │
│  ○ older-session · 2023-11-03T08:26:40.000Z                                  │
│Preview current-session · 42 events · last turn/end                           │
│1/2 · Enter resume · Space preview · R refresh                                │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders a loaded skill body without implying it was invoked 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Skills · ready · 2 matching                                                   │
│> rev█                                                                        │
│› /review-code · Review the diff for correctness · project-dsh                │
│  /route-review · Internal routing helper · model only · runtime              │
│review-code · /skills/review-code/SKILL.md                                    │
│  Read the diff first.                                                        │
│  Then check the tests.                                                       │
│Hooks: no public inventory on this Harness baseline                           │
│1/2 · ↑/↓ select · Enter insert · ^D details · R refresh · Esc close          │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders a wide command palette without losing input metadata 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Command palette                                                               │
│> █                                                                           │
│› /review <path> · Review current workspace changes before committing         │
│  Search transcript · Search the retained transcript window                   │
│1/2 · Enter select · Esc close                                                │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders an armed cancellation and bounded completion notices 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Jobs · confirming · 2 running                                                 │
│bash-2 failed · +2 more · A acknowledge                                       │
│  bash-1 · running · pnpm test --watch                                        │
│› bash-2 · failed · pnpm build                                                │
│  exit code: 3                                                                │
│  subagent-1 · running · unowned · audit the change index                     │
│Cancel bash-1? Enter confirm · Esc dismiss                                    │
│Output stays with the agent · 2/3 · ↑/↓ select · K cancel · R refresh · Esc c…│
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders an armed subagent follow-up draft 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Subagents · followup-input · 1 unread                                         │
│› •audit the change index · continuable · running · has children              │
│     summarize findings · one-shot · inactive                                 │
│  child-bad · unreadable (corrupt)                                            │
│Follow up: check the truncation path too█ · Enter send · Esc cancel           │
│1/3 · ↑/↓ select · F follow up · I interrupt · A attach · M mark read · R ref…│
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders an empty activity center without implying a failure 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Activity · 0 jobs running · 0 subagent updates · 0 todos open                 │
│Nothing pending · Esc close                                                   │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders coalesced activity from all three sources at 80 columns 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Activity · 2 jobs running · 3 subagent updates · 4 todos open                 │
│› [jobs] bash-2 failed: pnpm build                                            │
│  exit code: 3                                                                │
│  [subagents] 3 subagent updates (×4)                                         │
│  [plan] A plan is awaiting review                                            │
│1/3 · ↑/↓ select · Enter open · D dismiss · C clear all · Esc close           │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders command/path completion states 1`] = `
"╭──────────────────────────────────────────────────────────╮
│Path completion · src/co                                  │
│› src/controller.ts · file                                │
│1/1 · Enter apply · Esc close                             │
╰──────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders distinct recovery capabilities and fail-closed fork confirmation 1`] = `
"╭──────────────────────────────────────────────────────────────────────╮
│Recovery · current-session · confirming-fork                          │
│  ● Durable session barrier · available                               │
│  ● Raw session export · available                                    │
│› ● Conversation fork · available                                     │
│  ○ File rewind · unavailable                                         │
│Create a child conversation.                                          │
│Fork conversation only; current workspace files are not rewound. Ente…│
│Enter fork · Esc cancel                                               │
╰──────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders distinct recovery capabilities and fail-closed fork confirmation 2`] = `
"╭──────────────────────────────────────────────────────────────────────╮
│Recovery · current-session · export-input                             │
│  ● Durable session barrier · available                               │
│› ● Raw session export · available                                    │
│  ● Conversation fork · available                                     │
│  ○ File rewind · unavailable                                         │
│Raw backend artifact: /sessions/current.jsonl                         │
│Destination (existing files are never overwritten)                    │
│> backup.jsonl█                                                       │
│Enter export · Esc cancel                                             │
╰──────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders every semantic job state under the default theme 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Jobs · confirming · 2 running · truncated                                     │
│registry degraded                                                             │
│bash-2 failed · +1 more · A acknowledge                                       │
│  bash-1 · running · pnpm test --watch                                        │
│› bash-2 · failed · pnpm build                                                │
│  exit code: 3                                                                │
│  subagent-1 · running · unowned · audit the change index                     │
│Cancel bash-1? Enter confirm · Esc dismiss                                    │
│Output stays with the agent · 2/3 · ↑/↓ select · K cancel · R refresh · Esc c…│
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders every semantic job state under the high-contrast theme 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Jobs · confirming · 2 running · truncated                                     │
│registry degraded                                                             │
│bash-2 failed · +1 more · A acknowledge                                       │
│  bash-1 · running · pnpm test --watch                                        │
│› bash-2 · failed · pnpm build                                                │
│  exit code: 3                                                                │
│  subagent-1 · running · unowned · audit the change index                     │
│Cancel bash-1? Enter confirm · Esc dismiss                                    │
│Output stays with the agent · 2/3 · ↑/↓ select · K cancel · R refresh · Esc c…│
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders every semantic job state under the no-color theme 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Jobs · confirming · 2 running · truncated                                     │
│registry degraded                                                             │
│bash-2 failed · +1 more · A acknowledge                                       │
│  bash-1 · running · pnpm test --watch                                        │
│› bash-2 · failed · pnpm build                                                │
│  exit code: 3                                                                │
│  subagent-1 · running · unowned · audit the change index                     │
│Cancel bash-1? Enter confirm · Esc dismiss                                    │
│Output stays with the agent · 2/3 · ↑/↓ select · K cancel · R refresh · Esc c…│
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders every semantic subagent state under the default theme 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Subagents · ready · 1 unread                                                  │
│› •audit the change index · continuable · running · has children              │
│     summarize findings · one-shot · inactive                                 │
│  child-bad · unreadable (corrupt)                                            │
│1/3 · ↑/↓ select · F follow up · I interrupt · A attach · M mark read · R ref…│
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders every semantic subagent state under the no-color theme 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Subagents · ready · 1 unread                                                  │
│› •audit the change index · continuable · running · has children              │
│     summarize findings · one-shot · inactive                                 │
│  child-bad · unreadable (corrupt)                                            │
│1/3 · ↑/↓ select · F follow up · I interrupt · A attach · M mark read · R ref…│
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders file-grouped change review with bounded expanded detail 1`] = `
"╭──────────────────────────────────────────────────────────────╮
│Changes · 1 files · 2 edits                                   │
│› ▾ src/a.ts [1/2] · applied · Edit a.ts                      │
│  ▸ src/a.ts [2/2] · unverified · Edit a.ts again             │
│--- src/a.ts                                                  │
│+++ src/a.ts                                                  │
│- old one                                                     │
│… diff continues                                              │
│↑/↓ select · Enter fold/expand · J jump to transcript · Esc c…│
╰──────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders jobs with ownership, status, and the output boundary at 80 columns 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Jobs · ready · 2 running                                                      │
│  bash-1 · running · pnpm test --watch                                        │
│› bash-2 · failed · pnpm build                                                │
│  exit code: 3                                                                │
│  subagent-1 · running · unowned · audit the change index                     │
│Output stays with the agent · 2/3 · ↑/↓ select · K cancel · R refresh · Esc c…│
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders permission consequences and dangerous typed confirmation 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Permissions · confirming                                                      │
│Danger: sandbox danger-full-access · approval never.                          │
│Type enable danger-full-access                                                │
│> enable danger█                                                              │
│Enter confirm · Esc cancel                                                    │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders permission consequences and dangerous typed confirmation 2`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Permissions · ready                                                           │
│› ● Workspace write · sandbox workspace-write · approval ask                  │
│  Confine writes to the workspace and ask when needed.                        │
│  ○ Danger full access · sandbox danger-full-access · approval never          │
│Enter select · Esc close                                                      │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders plugin entries with phase, enablement, and the read-only boundary 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Plugins · ready · 3 entries · 1 failed                                        │
│  enabled  · active · @scope/ok                                               │
│› enabled  · failed · @scope/broken                                           │
│  disabled · none · @scope/off                                                │
│  Enabled entry whose root fiber failed to load                               │
│Read-only: no public transaction owns plugin enablement                       │
│2/3 · ↑/↓ select · R refresh · Esc close                                      │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders the skill catalog with invocation controls and the hook boundary 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Skills · ready · 2 matching                                                   │
│> rev█                                                                        │
│› /review-code · Review the diff for correctness · project-dsh                │
│  /route-review · Internal routing helper · model only · runtime              │
│Hooks: no public inventory on this Harness baseline                           │
│1/2 · ↑/↓ select · Enter insert · ^D details · R refresh · Esc close          │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > renders the subagent tree with depth, unread marks, and diagnostics at 80 columns 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Subagents · ready · 1 unread                                                  │
│› •audit the change index · continuable · running · has children              │
│     summarize findings · one-shot · inactive                                 │
│  child-bad · unreadable (corrupt)                                            │
│1/3 · ↑/↓ select · F follow up · I interrupt · A attach · M mark read · R ref…│
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > states that no MCP servers are registered rather than implying a failure 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│MCP · ready · 0 servers                                                       │
│Connection health: no public registry on this Harness baseline · 12 non-MCP t…│
│No MCP servers registered · R refresh · Esc close                             │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > states that no plugin inventory is mounted rather than showing nothing 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Plugins · unavailable · 0 entries                                             │
│Read-only: no public transaction owns plugin enablement                       │
│No plugin inventory on this Harness baseline · R refresh · Esc close          │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > states that the registry is unavailable rather than showing an empty list 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Jobs · unavailable · 0 running                                                │
│Output stays with the agent · R refresh · Esc close                           │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`OverlayPanel (M1.3) > states that the subagent runtime is unavailable rather than showing an empty tree 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│Subagents · unavailable                                                       │
│R refresh · Esc close                                                         │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;
